# sita

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  index.html  launcher.py  pyproject.toml  railway.toml  sita-live.sh  sita.py  sita_launcher.py
dashboard/: server.py
docs/: ARCHITECTURE.md  EXCHANGES.md  OPERATIONS.md
sita/: __init__.py  __main__.py  config.py  regime.py  setup.py
sita/adapters/: __init__.py
sita/arbitrage/: __init__.py
sita/confluence/: __init__.py
sita/execution/: __init__.py
sita/journal/: __init__.py
sita/position/: __init__.py
sita/reflection/: __init__.py
sita/risk/: __init__.py
sita/signal/: __init__.py
tests/: test_pipeline.py
